# pyJobber

./: .gitignore  CHANGES.md  CLAUDE.md  README.md  main.py  pyproject.toml  pytest.ini
docs/: MULTI_THREADING.md  README.md  api.md  configuration.md  developer-guide.md
gdpr-extension/: content.js  manifest.json  popup.html
lib/linkProvider/: bannedWords.txt  jobs.py  last_run.txt  linkProvider.py
lib/translator/: googleTrans.py
src/pyjobber/core/: background_scraper.py  filters.py  scraper.py
src/pyjobber/extractors/: job_details_extractor.py
src/pyjobber/providers/: base.py  bestjobs.py  ejobs.py
src/pyjobber/storage/: csv_handler.py
src/pyjobber/ui/: streamlit_app.py
src/pyjobber/utils/: gdprBlockerExtension.py  rate_limiter.py
tests/: README.md  conftest.py
tests/core/: test_filters.py
tests/storage/: test_csv_handler.py
tests/utils/: test_rate_limiter.py
