[project]
name = "pyjobber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bs4>=0.0.2",
    "googletrans>=4.0.2",
    "ollama>=0.5.4",
    "pandas>=2.3.2",
    "playwright>=1.55.0",
    "streamlit>=1.49.0",
    "urllib3<2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
]
